--- a/LEXIC_ANALIZATOR2.vcxproj.filters
+++ b/LEXIC_ANALIZATOR2.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="nfa.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Node.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="SyntaxAnalizator.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LexAnalizator.h">
@@ -43,6 +49,12 @@
     </ClInclude>
     <ClInclude Include="nfa.h">
       <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Node.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="SyntaxAnalizator.h">
+      <Filter>Исходные файлы</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
